manifests/1-k8s-resources/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: monitoring
spec:
  parentRefs:
    - name: dumbkv-gateway
      namespace: default
  hostnames:
    - monitor.shanana.shop
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-grafana
          port: 80
